--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,16 @@ nav a:hover {
   position: relative;
   left: 20px;
 }
-
+.bl2 {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: rgb(50, 50, 50);
+  background: url('../img/city.jpg') no-repeat 50% 50% fixed;
+  background-size: 130%;
+  overflow: hidden;
+  opacity: 0.7;
+}
 .hero {
   position: relative;
   width: 100%;
@@ -107,7 +116,14 @@ nav a:hover {
 .content-wrapper p {
   text-indent: 1.5em;
 }
-
+.left_big {
+  font-size: 42px;
+}
+.leftleft {
+  float: left;
+  padding: 60px 0 0 80px;
+  width: 400px;
+}
 .timeline {
   position: relative;
   padding:4px 0 0 0;
@@ -269,16 +285,22 @@ nav a:hover {
   background: #f3f3f3;
   margin-top: 120px;
   color:black;
+  position: relative;
+  top:-110px;
 }
 .white_block {
   width: 300px;
   float: left;
   margin-left: 60px;
-  margin-top: -100px;
+  margin-top: -80px;
   border: solid 1px orangered;
   box-shadow: 1px 10px 10px black;
   background: white;
   padding: 50px 10px;
+  margin-bottom: 33px;
+}
+.white_text {
+  line-height: 27px;
 }
 .wrapper {
   width: 70%;
@@ -349,6 +371,12 @@ p.attribution {
 
 p.attribution a {
   color: #4c8d7c;
+}
+.footer {
+  display: flex;
+}
+.footer .ff {
+  flex: 1;
 }
 @font-face {
   font-family: "Monsterrat";
